[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "euporie>=2.8.8",
    "gensim>=4.3.3",
    "jupytext>=1.16.7",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "ruff>=0.11.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
